increase memory available to surefire and cobertura plugins