@@ -137,7 +137,7 @@
               <dependency><!-- add support for ssh/scp -->
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-ssh</artifactId>
-                <version>1.0</version>
+                <version>2.2</version>
               </dependency>
           </dependencies>
         </plugin>
@@ -161,6 +161,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.12.3</version>
+          <configuration>
+            <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -182,6 +185,9 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
           <version>2.5-subrosa-1-r12883</version>
+          <configuration>
+            <maxmem>512m</maxmem>
+          </configuration>
         </plugin>
 
 		<plugin>
